syntax = "proto3";

package stage.v1;

import "include/v1/includes.proto";

service StageService {
  rpc GenerateProof(GenerateProofRequest) returns (GenerateProofResponse) {}
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse) {}
}

enum Status {
  SUCCESS = 0;
  UNSPECIFIED = 1;
  COMPUTING = 2;
  INVALID_PARAMETER = 3;
  INTERNAL_ERROR = 4;
  SPLIT_ERROR = 5;
  PROVE_ERROR = 6;
  AGG_ERROR = 7;
  SNARK_ERROR = 8;
}

message GenerateProofRequest {
  string proof_id = 1;
  bytes elf_data = 2;
  repeated includes.v1.BlockFileItem block_data = 3;
  optional uint64 block_no = 4;
  uint32 seg_size = 5;
  // sha256(elf_data)
  optional string elf_id = 6;
  string signature = 7;
  bytes public_input_stream = 8;
  bytes private_input_stream = 9;
  // only support Split, Agg and Snark
  // default value is Snark
  optional includes.v1.Step target_step = 10;
  bool composite_proof = 11;
  repeated bytes receipt_inputs = 12;
  repeated bytes receipts = 13;
  optional includes.v1.Step from_step = 14;
  // if true, the proof will be generated in a single node
  bool single_node = 15;
  uint32 max_prover_num = 16;
}

message GenerateProofResponse {
  Status status = 1;
  string error_message = 2;
  string proof_id = 3;
  string snark_proof_url = 4;
  string stark_proof_url = 5;
  bytes output_stream = 7;
  string public_values_url = 8;
}

message GetStatusRequest {
  string proof_id = 1;
}

message GetStatusResponse {
  string proof_id = 1;
  Status status = 2;
  bytes proof_with_public_inputs = 3;
  string snark_proof_url = 4;
  string stark_proof_url = 5;
  bytes output_stream = 7;
  includes.v1.Step step = 8; // Step
  string public_values_url = 9;
  uint64 total_steps = 10;
  bytes receipt = 11;
  bytes elf_id = 12;
}
